ebikes-lwc-master/force-app/main/default/objects/Product__c/fields/BHP__c.field-meta.xml
<CustomField>
    <fullName>BHP__c</fullName>
    <label>BHP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>