ebikes-lwc-master/force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Petrol</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
                <isActive>false</isActive>
                <label>Commuter</label>
            </value>
            <value>
                <fullName>Mountain</fullName>
                <isActive>false</isActive>
                <label>Mountain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>