ebikes-lwc-master/force-app/main/default/objects/Product__c/fields/Engine_Displacement__c.field-meta.xml
<CustomField>
    <fullName>Engine_Displacement__c</fullName>
    <label>Engine Displacement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>