ebikes-lwc-master/force-app/main/default/objects/Product__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Number of gears</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>Beginner</fullName>
                <isActive>false</isActive>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Enthusiast</fullName>
                <isActive>false</isActive>
                <label>Enthusiast</label>
            </value>
            <value>
                <fullName>Racer</fullName>
                <isActive>false</isActive>
                <label>Racer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>