ebikes-lwc-master/force-app/main/default/objects/Product__c/fields/Speed_Transmisssion__c.field-meta.xml
<CustomField>
    <fullName>Speed_Transmisssion__c</fullName>
    <label>Speed Transmisssion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>