ebikes-lwc-master/force-app/main/default/objects/Product__c/fields/Vehicle_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Manufacturer__c</fullName>
    <label>Vehicle Manufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>