ebikes-lwc-master/force-app/main/default/objects/Product__c/fields/Warranty_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_In_Months__c</fullName>
    <label>Warranty In Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>